# note

./: .create-nvimrc  .editorconfig  .gitignore  .notes  .nvimrc  CMakeLists.txt  Makefile  README.md  _note  _note_completion  add_tag.bash  astro.config.mjs  autoupdate.bash  clear.bash  colors.bash  commit.bash  create_dir.bash  create_file.bash  dashboard  descriptions.bash  dev_server.bash  echo_header.bash  edit.bash  editors.bash  find_notes_without_header.bash  forge.config.js  hide.bash  history.bash  image.bash  install.bash  interactive.bash  learn.bash  note  note-gui  notification.bash  open.bash  package-lock.json  package.json  render_markdown.bash  render_markdown_blockquotes.mjs  (+31 more)
.astro/: types.d.ts
.github/workflows/: deploy.yml
content/_pages/: The_Elements_of_Programming_Style.html
content/auto/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
content/bun/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
content/c/: 1.md  10.md  2.md  (+40 more)
gui/: app_data.c  app_data.h  const.h  content.c  content.h  debugger.c  layout.c  layout.h  main.c  note.h  panel.c  panel.h  panel_left.c  panel_left.h  panel_notes.c  panel_notes.h  panel_right.c  panel_right.h  panel_tags.c  panel_tags.h
server/: clear.ts  create.ts  createColumn.ts  createLink.ts  edit.ts  getContentLength.ts  getSearchParam.ts  getTagNames.ts  notImplemented.ts  random.ts  search.ts  select.ts  selectAll.ts  server_commands.ts  server_get_network_addr.ts  spawnCommandProcess.ts  stdoutCommand.ts  tag.ts  update.ts
web_public/: mobile.css  print.css
(+1460 files in other folders)
